[gd_scene load_steps=41 format=3 uid="uid://12m62tgdd131"]

[ext_resource type="Shader" uid="uid://dby42xd5pjrtu" path="res://Assets/sprites/hitflash.tres" id="1_8rnnh"]
[ext_resource type="Script" path="res://scripts/barrel.gd" id="1_cobf3"]
[ext_resource type="Texture2D" uid="uid://s83ipcvwv20l" path="res://Assets/sprites/sheet_barrel01Hit.png" id="2_k5jnu"]
[ext_resource type="PackedScene" uid="uid://3f5cxipw815" path="res://scenes/hit_box.tscn" id="3_pxijg"]
[ext_resource type="Texture2D" uid="uid://80iidagoe8nu" path="res://Assets/sprites/boomMediana.png" id="4_kuhus"]
[ext_resource type="PackedScene" uid="uid://b0frrqjfje0wb" path="res://scenes/health_component.tscn" id="5_27vyt"]
[ext_resource type="Texture2D" uid="uid://b631ip4n2c7ce" path="res://Assets/sprites/sheet_barrel01Destroy.png" id="5_m0qox"]
[ext_resource type="PackedScene" uid="uid://ot4et6702iw3" path="res://scenes/hurt_box.tscn" id="7_yowwu"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_i46b5"]
resource_local_to_scene = true
shader = ExtResource("1_8rnnh")
shader_parameter/enabled = false
shader_parameter/tint = Color(1, 1, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_2atgd"]
atlas = ExtResource("4_kuhus")
region = Rect2(0, 0, 133, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_iq3qp"]
atlas = ExtResource("4_kuhus")
region = Rect2(133, 0, 133, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3bvi"]
atlas = ExtResource("4_kuhus")
region = Rect2(266, 0, 133, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_3js6x"]
atlas = ExtResource("4_kuhus")
region = Rect2(0, 133, 133, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_vbngm"]
atlas = ExtResource("4_kuhus")
region = Rect2(133, 133, 133, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_0n7q8"]
atlas = ExtResource("4_kuhus")
region = Rect2(266, 133, 133, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_qof0x"]
atlas = ExtResource("4_kuhus")
region = Rect2(0, 266, 133, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_oja0i"]
atlas = ExtResource("4_kuhus")
region = Rect2(133, 266, 133, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_advrg"]
atlas = ExtResource("4_kuhus")
region = Rect2(266, 266, 133, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_52awm"]
atlas = ExtResource("2_k5jnu")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4aiih"]
atlas = ExtResource("2_k5jnu")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ibv2"]
atlas = ExtResource("5_m0qox")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k6bbj"]
atlas = ExtResource("5_m0qox")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qrqhy"]
atlas = ExtResource("5_m0qox")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2g5ga"]
atlas = ExtResource("5_m0qox")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x12of"]
atlas = ExtResource("5_m0qox")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ixolu"]
atlas = ExtResource("5_m0qox")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q4y6h"]
atlas = ExtResource("5_m0qox")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b3euo"]
atlas = ExtResource("5_m0qox")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4i37"]
atlas = ExtResource("5_m0qox")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pf1wn"]
atlas = ExtResource("5_m0qox")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3cxgp"]
atlas = ExtResource("5_m0qox")
region = Rect2(320, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_rk4gh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2atgd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iq3qp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3bvi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3js6x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vbngm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0n7q8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qof0x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oja0i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_advrg")
}],
"loop": false,
"name": &"boom",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_52awm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4aiih")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ibv2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k6bbj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qrqhy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2g5ga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x12of")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ixolu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q4y6h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b3euo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4i37")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pf1wn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3cxgp")
}],
"loop": false,
"name": &"drestroying",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_yyb01"]
radius = 55.0091

[sub_resource type="Animation" id="Animation_jk2vv"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"default"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HurtBox/CollisionShape2D2:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_qpq0i"]
resource_name = "boom"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"boom"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HurtBox/CollisionShape2D2:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_m6s78"]
resource_name = "destroying"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"drestroying"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d56k1"]
_data = {
"RESET": SubResource("Animation_jk2vv"),
"boom": SubResource("Animation_qpq0i"),
"destroying": SubResource("Animation_m6s78")
}

[sub_resource type="Animation" id="Animation_rpw7q"]
resource_name = "hit_flash"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_hckd1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_30jt1"]
_data = {
"RESET": SubResource("Animation_hckd1"),
"hit_flash": SubResource("Animation_rpw7q")
}

[node name="Barrel" type="Node2D"]
script = ExtResource("1_cobf3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_i46b5")
sprite_frames = SubResource("SpriteFrames_rk4gh")
autoplay = "default"

[node name="Hit_box" parent="." groups=["barrel"] instance=ExtResource("3_pxijg")]

[node name="HealthComponent" parent="." instance=ExtResource("5_27vyt")]
position = Vector2(-102, -34)

[node name="HurtBox" parent="." groups=["barrel"] instance=ExtResource("7_yowwu")]
damage = 3

[node name="CollisionShape2D2" parent="HurtBox" index="0"]
position = Vector2(1, 0)
shape = SubResource("CircleShape2D_yyb01")
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_d56k1")
}

[node name="hitFlash" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_30jt1")
}

[connection signal="on_health_changed" from="Hit_box" to="HealthComponent" method="_on_hit_box_on_health_changed"]
[connection signal="onDamageTaken" from="HealthComponent" to="." method="_on_health_component_on_damage_taken"]
[connection signal="onDead" from="HealthComponent" to="." method="_on_health_component_on_dead"]

[editable path="HurtBox"]
